--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    Javascript! Hello world  java
+    Javascript! Hello world  nothing
 </body>
 </html>
